# cominit

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Jenkinsfile  README.md  cominit_0.11.1.orig.tar.xz.delta  cominit_0.11.1.orig.tar.xz.id  cominit_0.12.2.orig.tar.xz.delta  cominit_0.12.2.orig.tar.xz.id  cominit_0.8.2.orig.tar.xz.delta  cominit_0.8.2.orig.tar.xz.id  cominit_0.8.3.orig.tar.xz.delta  cominit_0.8.3.orig.tar.xz.id  cominit_0.9.0.orig.tar.xz.delta  cominit_0.9.0.orig.tar.xz.id
CMakeModules/: FindMbedTLS.cmake  FindTss2-esys.cmake  FindTss2-tctildr.cmake
ci/: Dockerfile  aarch64-cmocka-toolchain.cmake  aarch64-toolchain.cmake  build.sh  checkversion.sh  clang-tidy.sh  create_coverage.sh  doc-toc.sh  docker-run.sh  format-code.sh  index.rst  lint-commits.sh  run-utests.sh
ci/mbedtls/: mbedtls-user-config.h
debian/: .gitignore  changelog  cominit-initramfs.install  cominit-tests.install  cominit.install  control  copyright  gbp.conf  initramfs-tools-hook  lintian-overrides  rules
debian/patches/: adapt-to-ubuntu-24.04-with-new-compiler-version  remove-fortify-source  series  use-mbedtls-wrapper
debian/upstream/: metadata
doc/LUKS/: LUKS_keyhandling.md  LUKS_support.md
doc/measured_boot/: measured-boot.md  tpm-library.md
doc/measured_boot/concept/: every-boot.puml  first-boot.puml
doc/partition_table_layout/: partition_layout_support.md
doc/secure_boot/: secure-boot.md
inc/: automount.h  common.h  crypto.h  cryptsetup.h  dmctl.h  keyring.h  meta.h  minsetup.h  output.h  securememory.h  subprocess.h  tpm.h  version.h
packaging/nautilos/: cominit.spec  initrd-cominit.spec
packaging/rpmbuild/SPECS/: cominit-git.spec
src/: CMakeLists.txt  automount.c  cominit.c  common.c  crypto.c  cryptsetup.c  dmctl.c  keyring.c  meta.c  minsetup.c  output.c  securememory.c  subprocess.c  tpm.c  version.c.in
test/: CMakeLists.txt  unit_test.h
test/mocks/: CMakeLists.txt  mock_Esys_Finalize.c  mock_Esys_Finalize.h  mock_Esys_Initialize.c  mock_Esys_Initialize.h  mock_Esys_PCR_Extend.c  mock_Esys_SelfTest.c  mock_Esys_SelfTest.h  mock_Tss2_TctiLdr_Finalize.c  mock_Tss2_TctiLdr_Initialize.c  mock_mbedtls_pk_free.c  mock_mbedtls_pk_free.h  mock_mbedtls_pk_init.c  mock_mbedtls_pk_init.h  mock_mbedtls_pk_parse_public_keyfile.c  mock_mbedtls_pk_write_pubkey_der.c  mock_mbedtls_sha256.h  mock_mbedtls_sha256_ret.c  mock_mbedtls_sha256_ret.h  mock_mount.c  mock_mount.h  mock_umount2.c  mock_umount2.h
test/mocks/mock_crypto/: CMakeLists.txt  mock_cominitCreateSHA256DigestfromKeyfile.c  mock_cominitCreateSHA256DigestfromKeyfile.h  mock_cominitCryptoCreatePassphrase.c  mock_cominitCryptoCreatePassphrase.h
test/mocks/mock_cryptsetup/: CMakeLists.txt  (+6 more)
test/mocks/mock_libtss2/: CMakeLists.txt  mock_Esys_Clear.c  mock_Esys_Clear.h  mock_Esys_Create.c  mock_Esys_Create.h  mock_Esys_CreatePrimary.c  mock_Esys_CreatePrimary.h  mock_Esys_EvictControl.c  mock_Esys_EvictControl.h  mock_Esys_FlushContext.c  mock_Esys_FlushContext.h  mock_Esys_Free.c  mock_Esys_Free.h  mock_Esys_GetRandom.c  mock_Esys_GetRandom.h  mock_Esys_Initialize.h  mock_Esys_Load.c  mock_Esys_Load.h  mock_Esys_PCR_Extend.h  mock_Esys_PolicyGetDigest.c  mock_Esys_PolicyGetDigest.h  mock_Esys_PolicyPCR.c  mock_Esys_PolicyPCR.h  mock_Esys_SelfTest.h  mock_Esys_StartAuthSession.c  mock_Esys_StartAuthSession.h  mock_Esys_TR_FromTPMPublic.c  mock_Esys_TR_FromTPMPublic.h  mock_Esys_TR_SetAuth.c  mock_Esys_TR_SetAuth.h  mock_Esys_Unseal.c  mock_Esys_Unseal.h  mock_Tss2_TctiLdr_Finalize.c  mock_Tss2_TctiLdr_Finalize.h  mock_Tss2_TctiLdr_Initialize.h
test/utest/: CMakeLists.txt
test/utest-cleanup-sysfiles/: CMakeLists.txt  utest-cleanup-sysfiles-umount-error.c  utest-cleanup-sysfiles.c
test/utest-crypto-create-digest/: CMakeLists.txt  utest-crypto-create-digest-failure.c  utest-crypto-create-digest-success.c  utest-crypto-create-digest.c  utest-crypto-create-digest.h
test/utest-crypto-verify-signature/: CMakeLists.txt  utest-crypto-verify-signature-failure.c  utest-crypto-verify-signature-success.c  utest-crypto-verify-signature.c  utest-crypto-verify-signature.h
test/utest-delete-tpm/: CMakeLists.txt  utest-delete-tpm-failure.c  utest-delete-tpm-success.c  utest-delete-tpm.h
test/utest-init-tpm/: CMakeLists.txt  utest-init-tpm-failure.c  utest-init-tpm-success.c  utest-init-tpm.c
test/utest-output-log-func/: CMakeLists.txt  utest-output-log-func-success.c
test/utest-output-parse-log-level/: CMakeLists.txt  utest-output-parse-log-level.h
test/utest-setup-sysfiles/: CMakeLists.txt  utest-setup-sysfiles-mkdir-error.c  utest-setup-sysfiles-mount-error.c  utest-setup-sysfiles-success.c  utest-setup-sysfiles.c  utest-setup-sysfiles.h
test/utest-tpm-extend-pcr/: CMakeLists.txt  utest-tpm-extend-pcr-failure.c  utest-tpm-extend-pcr-success.c  utest-tpm-extend-pcr.c
test/utest-tpm-parse-pcr-index/: CMakeLists.txt  utest-tpm-parse-pcr-index-failure.c  utest-tpm-parse-pcr-index-success.c  utest-tpm-parse-pcr-index.c  utest-tpm-parse-pcr-index.h
test/utest/crypto/utest-crypto-create-digest/: CMakeLists.txt  utest-crypto-create-digest-failure.c  utest-crypto-create-digest-success.c  utest-crypto-create-digest.c  utest-crypto-create-digest.h
test/utest/crypto/utest-crypto-create-passphrase/: CMakeLists.txt  utest-crypto-create-passphrase-failure.c  utest-crypto-create-passphrase-success.c  utest-crypto-create-passphrase.c  utest-crypto-create-passphrase.h
test/utest/crypto/utest-crypto-verify-signature/: CMakeLists.txt  utest-crypto-verify-signature-success.c  utest-crypto-verify-signature.c  utest-crypto-verify-signature.h
test/utest/securememory/utest-securememory-esys-create/: CMakeLists.txt  utest-securememory-esys-create-param-failure.c  utest-securememory-esys-create-success.c  utest-securememory-esys-create.c  utest-securememory-esys-create.h
test/utest/securememory/utest-securememory-esys-unseal/: CMakeLists.txt  utest-securememory-esys-unseal-param-failure.c  utest-securememory-esys-unseal-success.c  utest-securememory-esys-unseal.c  utest-securememory-esys-unseal.h
(+113 files in other folders)
